# argparse-types

./: README.md  setup.cfg
.github/workflows/: main.yaml
argtypes/: files.py  paths.py
tests/: test_files.py  test_paths.py
