[metadata]
name = argparse-types
version = 0.0.1
author = Adam Zegelin
author_email = adam@zegelin.com
description = A collection of type converter functions for use with Python's built-in argparse library.
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
license = MIT
url = https://github.com/zegelin/{name}
project_urls =
    Bug Tracker = https://github.com/zegelin/{name}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers

[options]
packages = argtypes
python_requires = >=3.6

[options.extras_require]
Yaml = pyyaml

